--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,15 +29,20 @@ body {
 
   img.activator{
     height: 180px;
-    opacity: 0.6;
+    opacity: 0.7;
   }
 
   .card{
     background: none !important;
   }
 
+  .card-content{
+    background: white;
+  }
+
   .card-title.activator.grey-text.text-darken-4{
     color: white !important;
-    background: black;
-    
+    background: rgba($color: #000000, $alpha: .5);
+    padding-top: 5px !important;    
+    padding-bottom: 5px !important;    
   }
