updated search functionality and updated modal to include attraction type

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -47,3 +47,7 @@ body {
     padding-top: 5px !important;    
     padding-bottom: 5px !important;    
   }
+
+  .searchDescription{
+    background: white !important;
+  }
