--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,8 +14,14 @@ body {
     flex: 1 0 auto;
   }
 
-  .container.body{
+  #body{
     padding-top: 20px;
+    background: url("../images/map.jpg") no-repeat;
+    background-size: 100%;
+  }
+
+  .container{
+    width: 100% auto;
   }
 
   .searchBar{
@@ -27,8 +33,8 @@ body {
     background: none;
   }
 
-  img.activator{
-    height: 180px;
+  .activator{
+    height: 100px;
     opacity: 0.7;
   }
 
